# auto_peer

./: Cargo.toml  README.md  build.rs  flake.nix
protos/: ping.proto
src/client/: main.rs
src/rpc/: ping.rs
src/server/: main.rs
