[package]
name = "auto-peer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auto-peer-client"
path = "src/client/main.rs"

[[bin]]
name = "auto-peer-server"
path = "src/server/main.rs"

[dependencies]
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
prost = "0.12.3"
sea-orm = { version = "0.12.12", features = ["runtime-tokio", "sqlx-all"] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
